[metadata]
name = cachecache
version = 0.1.1
description = Python package for easy function caching, allowing users to customize cache behavior at call-time.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/m-beau/cachecache
author = Maxime Beau
author_email = m.beau047@gmail.com
license = GPL-3.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6
install_requires =
    joblib >= 1.4
    psutil

[options.packages.find]
where = .
